--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div id="footer" class="mt-12 lg:mt-14"></div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
-  <script type="module" src="../assets/js/main.js"></script>
+  <script type="module" src="./assets/js/main.js"></script>
 </body>
+
 </html>
